--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-
+*{
+  margin: 0;
+  padding: 0;
+}
 body{
     
     background: linear-gradient(-45deg, #0a4536, #450c37, #1b5a71, #572818);
@@ -24,7 +27,7 @@ body{
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
