--- a/src/Componets/Game/Game.module.css
+++ b/src/Componets/Game/Game.module.css
@@ -2,6 +2,14 @@
     margin: 0;
     padding: 0;
   }
+  .back{
+    display: flex;
+    margin-left: 750px;
+    border-radius: 10px;
+    width: 90px;
+    font-size: 20px;
+    background-color: red;
+}
   
 .game{
     margin: 0 auto;
@@ -22,7 +30,8 @@
     flex-direction: column;
     gap: 10px;
     float: left; 
-    margin-right: 20px; 
+    justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0; 
 }
